2009-07-27 Harri Pitkänen <hatapitk@iki.fi>

	* Increase version number to 2.2.
	* Add virtual destructors to abstract base classes.

2009-07-23 Harri Pitkänen <hatapitk@iki.fi>

	* Switch to dictionary format 2.
	* Parse field "sijamuoto" during analysis.
	* Parse field "luokka" during analysis.

2009-07-22 Harri Pitkänen <hatapitk@iki.fi>

	* Change all internal users of morphological analysis to
	  use abstract analyzer instead of calling Malaga directly.

2009-07-20 Harri Pitkänen <hatapitk@iki.fi>

	* Allow longer suggestion search time if no valid
	  candidates have been found during normal search.
	* Add API for morphological analysis.

2009-07-19 Harri Pitkänen <hatapitk@iki.fi>

	* Refactor spelling suggestion code.
	* Suggest replacing numbers with nearby letters.
	* Add letter replacement suggestions.

2009-06-24 Harri Pitkänen <hatapitk@iki.fi>

	* Replace the commands used to generate autotools files
	  in autogen.sh with single call to autoreconf.

2009-05-28 Harri Pitkänen <hatapitk@iki.fi>

	* SPELL_FAILED from "pop-opisto" check should not be used as
	  the final result for words like "Pohjois-Israel".

2009-05-16 Harri Pitkänen <hatapitk@iki.fi>

	* Explicitly set stream orientation in voikkospell, otherwise
	  setting LC_CTYPE may break the output to stdout.

2009-05-06 Harri Pitkänen <hatapitk@iki.fi>

	* Some refactoring of spelling suggestion code.
	* Add project files for Qt Creator.

2009-04-26 Harri Pitkänen <hatapitk@iki.fi>

	* Disable character case checks completely within quotations.
	* Fix suggestions for punctuation at the end of quotes.

2009-04-25 Harri Pitkänen <hatapitk@iki.fi>

	* Accept different types of quote characters.
	* Accept single letters written in uppercase.
	* Accept Finnish dates without year.
	* Hyphen at the start of a paragraph may mean that the paragraph
	  is a list item.

2009-04-17 Lauri Nurmi <lanurmi@iki.fi>

	* Add "#error" if no charset conversion implementation
	  is available.
