@@ -1,3 +1,7 @@
+2009-07-29 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add (yet incomplete) Python interface.
+
 2009-07-27 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Increase version number to 2.2.
